--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "customer-management-project",
   "private": true,
   "version": "0.0.0",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
