--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
-{
+i{
   "version": 2,
   "builds": [
     {
-      "src": "index.js",  // or whatever your main server file is
+      "src": "./index.cjs",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "/"
     }
   ]
 }
